alignment issue fixes

--- a/style.css
+++ b/style.css
@@ -102,12 +102,11 @@ body {
 
 .info-box {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     width: 40vw;
-    height: auto;
+    height: fit-content;
     border-radius: 50px;
-    padding: 20px;
+    padding: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -120,13 +119,15 @@ body {
 
 .info-box-content {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
+    margin-top: 20px;
 }
 
 .info-box-header {
     font-family: Poppins;
     font-size: 24px;
+    margin-left: 20px;
 }
 
 .box-body {
@@ -176,7 +177,7 @@ body {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 1023px) {
     body {
         background: url("images/game_bg.png") no-repeat center center fixed;
         -webkit-background-size: cover;
@@ -218,7 +219,7 @@ body {
         display: none;
     }
 
-    .row {
+    .row, .info-box-content {
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -238,6 +239,10 @@ body {
         width: 80vw;
     }
 
+    #info-box-wide img {
+        margin-right: 10px;
+    }
+
     #info-box-wide h2 {
         font-size: 18px;
     }
@@ -253,7 +258,7 @@ body {
     .info-box img {
         width: 40%;
         height: 80%;
-        margin-right: 10px;
+        margin-bottom: 10px;
     }
 
     .box-body {
